force-app/main/default/objects/Individual_Pathway__c/Individual_Pathway__c.object-meta.xml
<CustomObject>
    <description>The program study progress for an individual program enrollment.</description>
    <label>Individual Pathway</label>
    <nameField>
        <displayFormat>IPW-{00000}</displayFormat>
        <label>Individual Pathway #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Pathways</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>