force-app/main/default/objects/Individual_Pathway__c/fields/Individual_Academic_Progress__c.field-meta.xml
<CustomField>
    <fullName>Individual_Academic_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Academic Progress</label>
    <referenceTo>Individual_Academic_Progress__c</referenceTo>
    <relationshipLabel>Individual Pathways</relationshipLabel>
    <relationshipName>Individual_Pathways</relationshipName>
    <type>Lookup</type>
</CustomField>