force-app/main/default/objects/Individual_Pathway__c/fields/Individual_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Program_Enrollment__c</fullName>
    <label>Individual Program Enrollment</label>
    <referenceTo>Individual_Program_Enrollment__c</referenceTo>
    <relationshipLabel>Individual Pathways</relationshipLabel>
    <relationshipName>Individual_Pathways</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>