force-app/main/default/objects/Individual_Pathway__c/fields/IPR_Credits_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>IPR_Credits_Enrolled__c</fullName>
    <formula>Individual_Academic_Progress__r.Credits_Enrolled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits Enrolled</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>