force-app/main/default/objects/Individual_Pathway__c/fields/IPR_Max_Credits__c.field-meta.xml
<CustomField>
    <fullName>IPR_Max_Credits__c</fullName>
    <formula>IF(ISBLANK( Individual_Academic_Progress__c ),  Max_Credits__c ,  Individual_Academic_Progress__r.Max_Credits__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Credits</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>