force-app/main/default/objects/Individual_Pathway__c/fields/IPR_Recommended_Credits__c.field-meta.xml
<CustomField>
    <fullName>IPR_Recommended_Credits__c</fullName>
    <formula>IF(ISBLANK( Individual_Academic_Progress__c ),  Recommended_Credits__c ,  Individual_Academic_Progress__r.Recommended_Credits__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommended Credits</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>