force-app/main/default/objects/Individual_Pathway__c/fields/Recommended_Credits__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Credits__c</fullName>
    <label>Recommended Credits</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>