force-app/main/default/objects/Individual_Pathway__c/fields/Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Status_Label__c</fullName>
    <description>The label for status.</description>
    <formula>CASE( Status__c , &apos;Current&apos;,  $Label.reduivy__Current , &apos;Completed&apos;, $Label.reduivy__Completed, $Label.reduivy__Future)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>