force-app/main/default/objects/Individual_Pathway__c/fields/Term_Number__c.field-meta.xml
<CustomField>
    <fullName>Term_Number__c</fullName>
    <description>The number of this pathway record term. if there at 8 terms then there will be 8 of these records numbered 1-8</description>
    <label>Term #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>