force-app/main/default/objects/Individual_Pathway__c/validationRules/Validate_Academic_Term.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Academic_Term</fullName>
    <active>true</active>
    <description>To ensure the selected academic term is valid.</description>
    <errorConditionFormula>NOT(ISBLANK( Academic_Term__c )) &amp;&amp;  Academic_Term__r.RecordType.DeveloperName != &apos;Academic_Term&apos;</errorConditionFormula>
    <errorDisplayField>Academic_Term__c</errorDisplayField>
    <errorMessage>Please select a valid academic term.</errorMessage>
</ValidationRule>