force-app/main/default/objects/Individual_Pathway__c/validationRules/Validate_IPR_Academic_Profile.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_IPR_Academic_Profile</fullName>
    <active>true</active>
    <description>To ensure the select individual academic progress belongs to the individual academic profile set on individual program enrollment.</description>
    <errorConditionFormula>NOT(ISBLANK(Individual_Academic_Progress__c)) &amp;&amp;  Individual_Program_Enrollment__r.Individual_Academic_Profile__c !=  Individual_Academic_Progress__r.Individual_Academic_Profile__c</errorConditionFormula>
    <errorDisplayField>Individual_Academic_Progress__c</errorDisplayField>
    <errorMessage>Please select an individual academic progress that belongs to the same individual academic profile.</errorMessage>
</ValidationRule>