force-app/main/default/objects/Individual_Pathway__c/validationRules/Validate_IPR_Academic_Term.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_IPR_Academic_Term</fullName>
    <active>true</active>
    <description>To ensure the selected individual academic progress belongs to the same academic term.</description>
    <errorConditionFormula>NOT(ISBLANK(Academic_Term__c)) &amp;&amp; Academic_Term__c !=  Individual_Academic_Progress__r.Academic_Term__c</errorConditionFormula>
    <errorDisplayField>Individual_Academic_Progress__c</errorDisplayField>
    <errorMessage>Please select an individual academic progress that belongs to the same academic term.</errorMessage>
</ValidationRule>