force-app/main/default/objects/Individual_Pathway__c/validationRules/Validate_IPR_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_IPR_Contact</fullName>
    <active>true</active>
    <description>To ensure the selected individual academic progress belongs to the same contact.</description>
    <errorConditionFormula>NOT(ISBLANK(Individual_Academic_Progress__c)) &amp;&amp; Individual_Program_Enrollment__r.Contact__c !=  Individual_Academic_Progress__r.Contact__c</errorConditionFormula>
    <errorDisplayField>Individual_Academic_Progress__c</errorDisplayField>
    <errorMessage>Please select an individual academic progress that belongs to the same contact.</errorMessage>
</ValidationRule>